# scrobble-recall

./: README.md  main.py  pyproject.toml
lastfm_recommender/: __init__.py  __main__.py  api.py  interactive.py  models.py  recommender.py  utils.py
tests/: test_interactive.py  test_recommender.py
